Add second section

--- a/index.html
+++ b/index.html
@@ -29,11 +29,40 @@
                     <p class="text">Ultimate destination for JDM car enthusiasts. Our organization is dedicated to providing high-quality content about all things JDM cars, drifting touge, drifting competitions, and driving cars on track.</p>
                     <button class="signup">Sign Up</button>
                 </div>
-                <img class ="drifting" src="images/drifting.webp">
+                <img class ="drifting" src="images/drifting.jpg">
 
                 
 
             </div>
+
+        </div>
+
+
+        <div class="section2">
+
+            <p class="second-title">What do we do?</p>
+
+            <div class="container-two">
+                <div class="pretty-box">
+                    <img src="images/tire.jpg" class="box-image">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, veritatis?</p>
+                </div>
+                <div class="pretty-box">
+                    <img src="images/blown-diff.jpeg" class="box-image">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sapiente.</p>
+                </div>
+                <div class="pretty-box">
+                    <img src="images/manual.jpg" class="box-image">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, accusamus!</p>
+                </div>
+                <div class="pretty-box">
+                    <img src="images/crashed.jpg" class="box-image">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, accusamus!</p>
+                </div>
+             </div>
+
+
+
 
         </div>
         
