Add third and fourth sections

--- a/index.html
+++ b/index.html
@@ -65,6 +65,27 @@
 
 
         </div>
+
+        <div class="section3">
+
+            <p class="quote">It has four wheels and it runs. It's a car.</p>
+            <p class="author">-Takumi Fujiwara</p>
+
+        </div>
+
+        <div class="section4">
+            <div class="blue">
+                <div text>
+                    <p class="hero callaction">Its time! Blow your own diff!</p>
+                    <p class="hero signup3">Click the sign up button to learn how to drop your own clutch!</p>
+                </div>
+                <button class="signup2">Sign Up</button>
+            </div>
+        </div>
+
+        <div class="copyright">
+            <p>Copyright © The Odin Project 2023</p>
+        </div>
         
     </body>
 </html>
